--- a/SistemaInventario/PainelAnalista/CSS/BlueArt.css
+++ b/SistemaInventario/PainelAnalista/CSS/BlueArt.css
@@ -2,6 +2,8 @@
 * {
   margin: 0;
   padding: 0;
+  text-rendering: unset;
+  font-family: 'Sofia Sans Extra Condensed'; /* Define a fonte para o texto do botão */
   box-sizing: border-box; /* Garante que padding e border não aumentem o tamanho dos elementos */
 }
 
@@ -40,7 +42,7 @@ body {
   z-index: 0;
   image-rendering: -webkit-optimize-contrast; /* Melhora o contraste em navegadores WebKit */
   object-fit: cover; /* Mantém a proporção da imagem sem distorção */
-  padding-bottom: 899px; /* Adiciona espaço extra para mover a imagem para baixo */
+  padding-bottom: 895px; /* Adiciona espaço extra para mover a imagem para baixo */
 }
 
 #row-content::before {
@@ -52,7 +54,7 @@ body {
   height: 100%;
   border-radius: 5px;
   background-image: url('../../Images/ImageMenu6.jpg');
-  background-size: 45vw; /* Utilizando vw para dimensionamento responsivo */
+  background-size: 50vw; /* Utilizando vw para dimensionamento responsivo */
   background-position: left bottom;
   background-repeat: no-repeat;
   z-index: -1;
@@ -67,7 +69,6 @@ body {
 
 .well {
   background-color: rgba(255, 255, 255, 0.1); /* Fundo semitransparente para melhor contraste */
-  font-weight: bold; /* Negrito */
   border: none; /* Remove a borda */
   color: #005ce6; /* Cor do texto */
   cursor: context-menu; /* Cursor de contexto */
@@ -93,7 +94,7 @@ body {
   background-size: 14%; /* Ajuste a porcentagem para reduzir a proporção da imagem */
   background-position: center; /* Alinha a imagem ao centro */
   background-repeat: no-repeat; /* Evita repetição da imagem */
-  opacity: 0.9; /* Ajuste o valor para conseguir o efeito de opacidade desejado */
+  opacity: 1.0; /* Ajuste o valor para conseguir o efeito de opacidade desejado */
   z-index: -1; /* Coloca a imagem atrás do conteúdo do .well */
   pointer-events: none; /* Garante que a imagem de fundo não interfira com eventos de clique */
   mix-blend-mode: multiply; /* Define o modo de mistura */
@@ -325,6 +326,7 @@ img {
   #blue-title-btn-painel {
     text-align: left; /* Alinhamento à esquerda */
     color: #005ce6; /* Cor do texto */
+    font-weight: bold;
     font-size: 13px; /* Tamanho da fonte */
   }
 
@@ -354,7 +356,7 @@ img {
 }
 
 #blue-table-cadastro-auxiliar td {
-  padding: 4px; /* Espaçamento interno */
+  padding: 5px; /* Espaçamento interno */
   overflow: hidden; /* Esconder conteúdo excedente */
   text-overflow: ellipsis; /* Adicionar elipses (...) para textos longos */
   white-space: nowrap; /* Não quebrar linhas */
@@ -487,6 +489,7 @@ img {
   outline: none; /* Remove a borda de foco padrão */
   cursor: pointer; /* Define o cursor como pointer */
   color: #33334d; /* Define a cor do texto */
+  text-rendering: unset;
   font-size: 10px; /* Define o tamanho da fonte */
   font-weight: bold; /* Define a fonte como negrito */
   border: 1px solid #666699; /* Define a borda */
@@ -500,6 +503,7 @@ img {
   #blue-btn-table-cadastro-produto {
     background-color: transparent; /* Fundo transparente */
     width: 20%; /* Largura */
+    padding: 3px;
     color: #005ce6; /* Cor do texto */
     font-size: 11px; /* Tamanho da fonte */
     font-weight: bold; /* Texto em negrito */
@@ -668,7 +672,7 @@ img {
 
 /* Estilo para o botão de relatório auxiliar azul */
 #blue-btn-relatorio-auxiliar-blue {
-  width: 10%; /* Largura do botão */
+  width: 11%; /* Largura do botão */
   height: auto; /* Altura automática */
   padding: 5px;
   background-color: transparent; /* Define a cor de fundo como branco*/
@@ -676,7 +680,8 @@ img {
   margin: 0.5% 0.2%; /* Margem entre os botões (vertical horizontal) */
   border-radius: 3px; /* Borda arredondada */
   border: 1px solid #005ce6; /* Borda sólida azul */
-  font-size: 12px; /* Tamanho da fonte reduzido */
+  font-weight: bold;
+  font-size: 11px; /* Tamanho da fonte reduzido */
   transition: background-color ease 0.7s; /* Transição suave de cor de fundo */
   flex: 1; /* Ocupa espaço igualmente dentro do container flexível */
   max-width: 10%; /* Largura máxima para garantir que 9 botões caibam na mesma linha */
@@ -810,9 +815,10 @@ img {
 #blue-text-table-exibicao {
   color: #33334d; /* Cor do texto */
   font-weight: bold; /* Texto em negrito */
+  text-rendering: unset;
   text-align: center; /* Alinhamento central do texto */
-  font-size: 0.62em; /* Tamanho da fonte usando uma unidade relativa */
-  padding: 0.4em; /* Espaçamento interno para manter proporção */
+  font-size: 0.60em; /* Tamanho da fonte usando uma unidade relativa */
+  padding: 0.5em; /* Espaçamento interno para manter proporção */
 }
 
 @media (max-width: 768px) {
