--- a/SistemaInventario/PainelTecnico/CSS/BlueArt.css
+++ b/SistemaInventario/PainelTecnico/CSS/BlueArt.css
@@ -928,13 +928,13 @@ img {
   width: 100%; /* Largura total */
   margin-top: 1%; /* Margem superior */
   margin-left: 0%;
-  border: 1px solid #33334d;
+  border: 2px solid #000000;
   table-layout: auto; /* Permitir que a largura das células seja ajustada automaticamente */
 }
 
 /* Estilo para as células da tabela */
 #blue-table-cadastro-auxiliar-print td {
-  padding: 10px; /* Espaçamento interno */
+  padding: 5px; /* Espaçamento interno */
   overflow: hidden; /* Esconder conteúdo excedente */
   text-overflow: ellipsis; /* Adicionar elipses (...) para textos longos */
   white-space: nowrap; /* Não quebrar linhas */
@@ -975,11 +975,11 @@ img {
 }
 
 #line-blue-table-print{
-border: 1px solid #33334d;  
+border: 2px solid #000000;  
   }
 
-  #colun-blue-table-print{
-border: 1px solid #33334d;
+#colun-blue-table-print{
+border: 2px solid #000000;
   }
 
 #blue-title-listar-print{
@@ -989,7 +989,7 @@ border: 1px solid #33334d;
   font-size: 15px; /* Tamanho da fonte */
   font-weight: bold; /* Texto em negrito */
   margin-top: 0.5px; /* Margem superior */
-  border: 1px solid #33334d; /* Borda sólida */
+  border: 2px solid #000000; /* Borda sólida */
   text-align: center; /* Alinhamento central do texto */
 }
 
@@ -1002,12 +1002,12 @@ border: 1px solid #33334d;
   text-align: center; /* Centraliza o texto */
   font-size: 14px; /* Define o tamanho da fonte */
   font-weight: bold; /* Define a fonte como negrito */
-  border: 1px solid; /* Define a borda */
+  border: 2px solid; /* Define a borda */
   margin-top: 2%; /* Adiciona uma margem superior de 1% */
   border-top-color: transparent; /* Remove a cor da borda superior */
   border-left-color: transparent; /* Remove a cor da borda esquerda */
   border-right-color: transparent; /* Remove a cor da borda direita */
-  border-bottom-color: #666699; /* Define a cor da borda inferior */
+  border-bottom-color: #000000; /* Define a cor da borda inferior */
 }
 
 
